# agent_powerpoint

./: .env.sample  .gitignore  AGENT.md  HEADLESS_SETUP.md  README.md  hello_world_presentation.pptx  main.py  pyproject.toml  requirements.md  slide_20251116_100808.pptx  test_input_description.md
sample/: sample.txt  sample_input_description.md  sample_input_slide_description.md
slidegen/: __init__.py  artifacts.py  cli.py  config.py  execution.py  logging_config.py  openai_client.py  prompt_store.py  scoring.py  screenshot.py  scripts.py  state.py  types.py  viewer.py
slidegen/prompt_templates/: fix_script.txt  improve_script.txt  initial_script.txt  score_slide.txt  shared_pptx_api.txt  shared_requirements.txt
tests/: test_config.py  test_openai_client.py  test_prompt_store.py  test_state_machine.py  test_template_integration.py
