[project]
name = "pptxai1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=9.0.1",
    "python-pptx>=1.0.2",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "openai>=1.44.0",
    "pillow>=10.4.0",
    "pytest>=9.0.1",
    "pymupdf>=1.24.9",
]

[project.scripts]
slidegen = "slidegen.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["slidegen"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
